--- a/package.json
+++ b/package.json
@@ -6,8 +6,6 @@
     "grunt-contrib-connect": "^0.9.0",
     "grunt-contrib-jshint": "^0.11.0",
     "grunt-contrib-uglify": "^0.8.0",
-    "grunt-contrib-watch": "^0.6.1",
-    "jshint": "^2.6.3",
-    "uglify": "^0.0.1"
+    "grunt-contrib-watch": "^0.6.1"
   }
 }
