--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "vents",
   "version": "0.0.1",
+  "license": "MIT",
   "devDependencies": {
     "grunt": "^0.4.5",
     "grunt-contrib-connect": "^0.9.0",
